--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /Src/NLangDetect.Core.Tests/bin
 /NLangDetect.sln — skrót.lnk
 /Src/NLangDetect.ConsoleApp/NLangDetect.ConsoleApp.csproj.user
+/Src/NLangDetect.6.0.ReSharper.user
