Changed names of some languages. Fixed tests.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /NLangDetect.sln — skrót.lnk
 /Src/NLangDetect.ConsoleApp/NLangDetect.ConsoleApp.csproj.user
 /Src/NLangDetect.6.0.ReSharper.user
+/Bin
+/Tests
+/NLangDetect.sln - Shortcut.lnk
