--- a/Src/NLangDetect.Core/NLangDetect.Core.csproj
+++ b/Src/NLangDetect.Core/NLangDetect.Core.csproj
@@ -31,6 +31,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\..\Bin\NLangDetect.Core\NLangDetect.Core.xml</DocumentationFile>
+    <NoWarn>1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
@@ -56,6 +57,7 @@
     <Compile Include="LanguageName.cs" />
     <Compile Include="NLangDetectException.cs" />
     <Compile Include="Language.cs" />
+    <Compile Include="ProbVector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Utils\LangProfile.cs" />
